# Kharka-Kushal---ds_s2026_week-1_assignment--Kharka-Kushal-

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: setup.md
src/: challenges.py
tests/: test_challenges.py
